--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
+    "@sveltejs/adapter-node": "^1.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "svelte": "^3.55.1",
